# sqliteExtForJavaUdf

./: .gitignore  README.md  settings.gradle
aar/: libSqliteExtForJavaUdf.aar
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/app/sqliteextforjavaudf/: MainActivity.java  SimpleCustomFncts.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libSqliteExtForJavaUdf/: build.gradle
libSqliteExtForJavaUdf/src/main/: AndroidManifest.xml
libSqliteExtForJavaUdf/src/main/cpp/: CMakeLists.txt  jniSqliteExtForJavaUdf.cpp  jniSqliteExtForJavaUdf.h
libSqliteExtForJavaUdf/src/main/java/lib/sqliteextforjavaudf/: SQLiteUdfFnctManager.java
